@@ -1,8 +1,9 @@
 brlcad (7.18.4-0) unstable; urgency=low
 
   * add magic mime-type association for geometry db file v.4 and v.5
+  * add new mime-type icons for geometry db file v.4 and v.5
 
- -- Jordi Sayol <g.sayol@yahoo.es>  Mon, 28 Feb 2011 17:59:18 +0100
+ -- Jordi Sayol <g.sayol@yahoo.es>  Sat, 05 Mar 2011 23:10:51 +0100
 
 brlcad (7.18.2-0) unstable; urgency=low
 
